--- a/templates/board_list.html
+++ b/templates/board_list.html
@@ -3,15 +3,40 @@
   <head>
     <meta charset="utf-8">
     <title>board list</title>
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" type="text/css">
+    <link rel="stylesheet" href="https://v40.pingendo.com/assets/4.0.0/default/theme.css" type="text/css"> </head>  
   </head>
   <body>
+      <nav class="navbar navbar-expand-md bg-primary navbar-dark">
+          <div class="container">
+            <a class="navbar-brand" href="/board">
+              <i class="fa d-inline fa-lg fa-cloud"></i>
+              <b>&nbsp;게시판 리스트</b>
+            </a>
+              {% if username == None %}
+              <div class="collapse navbar-collapse text-center justify-content-end" id="navbar2SupportedContent">
+                  <a class="btn navbar-btn ml-2 text-white btn-secondary" href="/register">
+                        Sign in</a>
+                        <a class="btn navbar-btn ml-2 text-white btn-secondary" href="/login">
+                         Login</a>
+              </div>
+              {% else %}
+                        <div class="collapse navbar-collapse text-center justify-content-end" id="navbar2SupportedContent">
+                                <a class="btn navbar-btn ml-2 text-white btn-secondary">{{username}}
+                                </a>
+                                <a class="btn navbar-btn ml-2 text-white btn-secondary" href="/logout">
+                                   Logout</a>
+                            </div>
+                        {% endif %}
+          </div>
+        </nav>
+    <div class="container">
     <table class="table table-striped">
       <tr>
         <th>idx</th>
         <th>username</th>
         <th>title</th>
-        <th>content</th>
         <th>updown</th>
       </tr>
       {% for i in data %}
@@ -19,10 +44,10 @@
           <td><a href="/board/{{ i[0] }}">{{ i[0] }}</a></td>
           <td>{{ i[1] }}</td>
           <td>{{ i[2] }}</td>
-          <td>{{ i[3] }}</td>
           <td>{{ i[4] }}</td>
         </tr>
     {% endfor %}
     </table>
+  </div>
   </body>
 </html>
