--- a/templates/register.html
+++ b/templates/register.html
@@ -3,7 +3,9 @@
     <head>
         <meta charset="utf-8">
         <title>register</title>
-        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" type="text/css">
+        <link rel="stylesheet" href="https://v40.pingendo.com/assets/4.0.0/default/theme.css" type="text/css"> </head>
         <style>
             .jmp {
                 margin-top : 15%;
@@ -11,6 +13,21 @@
         </style>
     </head>
     <body>
+            <nav class="navbar navbar-expand-md bg-primary navbar-dark">
+                    <div class="container">
+                      <a class="navbar-brand" href="/board">
+                        <i class="fa d-inline fa-lg fa-cloud"></i>
+                        <b>&nbsp;로그인</b>
+                      </a>
+    
+                        <div class="collapse navbar-collapse text-center justify-content-end" id="navbar2SupportedContent">
+                            <a class="btn navbar-btn ml-2 text-white btn-secondary" href="/register">
+                                  Sign in</a>
+                                  <a class="btn navbar-btn ml-2 text-white btn-secondary" href="/login">
+                                    Login</a>
+                        </div>
+                    </div>
+                  </nav>
     <div class="form-group">
         <div class="row jmp">
         <div class="col-md-4"></div>
