--- a/templates/write.html
+++ b/templates/write.html
@@ -3,13 +3,42 @@
     <head>
         <meta charset="utf-8">
         <title>write</title>
-        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" type="text/css">
+        <link rel="stylesheet" href="https://v40.pingendo.com/assets/4.0.0/default/theme.css" type="text/css"> </head>
     </head>
     <body>
-        <form action="{{ url_for('write') }}" method="post">
+            <nav class="navbar navbar-expand-md bg-primary navbar-dark">
+                    <div class="container">
+                      <a class="navbar-brand" href="/board">
+                        <i class="fa d-inline fa-lg fa-cloud"></i>
+                        <b>&nbsp;글쓰기</b>
+                      </a>
+                        {% if username == None %}
+                        <div class="collapse navbar-collapse text-center justify-content-end" id="navbar2SupportedContent">
+                            <a class="btn navbar-btn ml-2 text-white btn-secondary" href="/register">
+                                   Sign in</a>
+                                  <a class="btn navbar-btn ml-2 text-white btn-secondary" href="/login">
+                                    Login</a>
+                        </div>
+                        {% else %}
+                        <div class="collapse navbar-collapse text-center justify-content-end" id="navbar2SupportedContent">
+                                <a class="btn navbar-btn ml-2 text-white btn-secondary">
+                                       {{username}}
+                                </a>
+                                <a class="btn navbar-btn ml-2 text-white btn-secondary" href="/logout">
+                                    Logout</a>
+                            </div>
+                        {% endif %}
+                    </div>
+                  </nav>
+        <div class="container">>
+        <form action="{{ url_for('write') }}" method="post" enctype="multipart/form-data">
             <input maxlength="20" class="form-control" type="text" name="title" placeholder="title">
             <textarea class="form-control" rows="3" name="content" placeholder="input data"></textarea>
+            <input name="file_data" type="file">
             <input type="submit" value="send">
         </form>
+        </div
     </body>
 </html>
