--- a/templates/board_list.html
+++ b/templates/board_list.html
@@ -23,6 +23,8 @@
               </div>
               {% else %}
                         <div class="collapse navbar-collapse text-center justify-content-end" id="navbar2SupportedContent">
+                            <a class="btn navbar-btn ml-2 text-white btn-secondary" href="/write">
+                              write</a>
                                 <a class="btn navbar-btn ml-2 text-white btn-secondary">{{username}}
                                 </a>
                                 <a class="btn navbar-btn ml-2 text-white btn-secondary" href="/logout">
